# Calc-v2.0

./: README_RUS.md
src/: Doxyfile
src/documentation/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000003_000000.html  dir_3c94610896232806b46b1200269b9bb2.html  dir_3c94610896232806b46b1200269b9bb2_dep.dot  dir_966b79ed7d2a056d77a7a3ddddcb0c31.html  dir_966b79ed7d2a056d77a7a3ddddcb0c31_dep.dot  dir_c3e0c4cd20f4cd41005a2dd9452b8c7d.html  dir_c3e0c4cd20f4cd41005a2dd9452b8c7d_dep.dot  dir_f9b4a3e8e8b4cda273e0db56f2152fe6.html  dir_f9b4a3e8e8b4cda273e0db56f2152fe6_dep.dot  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_eval_b.html  functions_eval_c.html  functions_eval_d.html  functions_eval_e.html  functions_eval_f.html  functions_eval_g.html  functions_eval_i.html  functions_eval_l.html  functions_eval_n.html  functions_eval_p.html  functions_eval_r.html  functions_eval_s.html  functions_eval_t.html  functions_eval_u.html  functions_eval_w.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  (+113 more)
src/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+121 more)
src/s21_SmartCalc_v2/: CMakeLists.txt  Makefile
src/s21_SmartCalc_v2/controller/: controller.cc  controller.h
src/s21_SmartCalc_v2/model/: calculate.cc  calculate.h  economy.cc  economy.h
src/s21_SmartCalc_v2/tests/: CMakeLists.txt  s21_test_smart.cc
src/s21_SmartCalc_v2/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+187 files in other folders)
